--- a/styles_main.css
+++ b/styles_main.css
@@ -1,5 +1,6 @@
+/* this stylesheet is for the main, navbar, as well as the opening transition */
 html, body {
-    color: rgb(22, 22, 22);
+    color: rgb(74, 75, 78);
     margin: 0;
     padding: 0;
     width: 100%;
@@ -47,6 +48,7 @@ html, body {
     padding: 10px 10px;
     background-color: transparent;
     border-radius: 8px;
+    display: flex;
 }
 
 .navbar ul li a:hover {
@@ -55,8 +57,8 @@ html, body {
 
 .hero-image {
     background: 
-        linear-gradient(to bottom, rgba(0, 0, 0, 0) 40%, #c4cfdb 100%), 
-        url('6.16.viet.png');
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 40%, #ebeff3 100%), 
+        url('images/6.16.viet.png');
     font-variant: small-caps;
     background-size: cover;
     background-position: center;
@@ -77,6 +79,7 @@ html, body {
 }
 
 .hero-image p {
+    margin-top: 2px;
     font-size: 2.5vw;
     max-width: 90%;
 }
@@ -103,16 +106,6 @@ html, body {
 .fade-in-active {
     opacity: 1;
     transition: opacity 0.8s ease;
-}
-
-#about h1, #contact h1{
-    padding-top: 5vw;
-    text-align: center;
-    font-size: 1.25vw;
-}
-#about p, #contact p{
-    
-    font-size:  1.25vw;
 }
 
 @media (max-width: 500px) {
