--- a/abt_ct_me.css
+++ b/abt_ct_me.css
@@ -16,19 +16,26 @@
 }
 
 .about-section {
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
+    background: linear-gradient(to bottom, transparent 98%, #6d6d6d75 100%);
 }
 
 .about-content {
     display: flex; 
     align-items: flex-start; 
     margin-left: 4vw;
+    padding-bottom: 80px;
 }
 
 .about-text {
     flex: 1; 
-    margin-right: 20px; 
+    margin-right: 25px; 
 }
+
+/* .quotes-section{
+    background: linear-gradient(to bottom, transparent 98%, #6d6d6d75 100%);
+} */
+
 
 .my-face {
     max-width: 375px; 
@@ -38,26 +45,25 @@
 
 
 .footer-contact {
-    background-color: #4d658075; 
+    background-color: #6d6d6d75; 
     color: white;
-    padding: 25px; 
+    padding: 10px; 
     text-align: center; 
     position: relative; 
-    /* margin-top: 20px;  */
+   
 }
 
 .footer-contact h1 {
     font-variant: small-caps;
     font-size:  2vw;
-    text-align: left;
     padding-left: 30px;
 }
 
 .footer-contact .contact-info {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-top: 10px; 
+    margin-top: 5px; 
     font-size:  1.5vw;
-    padding-left: 50px;
+    /* padding-left: 50px; */
 }
 
 .footer-contact a {
