--- a/port.css
+++ b/port.css
@@ -2,16 +2,18 @@
 #head {
     padding: 40px 20px;
     display: flex;
-    justify-content: center;  
+    justify-content: center;
+    flex-direction: column;  
     align-items: center; 
     height: 200px;
     margin-top: 3vw;
 }
 
 .intro-container {
-    display: flex;            
+    display: relative;            
     gap: 10vw;               
 }
+
 #head h1 {
     font-variant: small-caps;
     font-size: 3rem;
@@ -19,11 +21,17 @@
     overflow: hidden; 
     border-right: .15em solid rgb(255, 203, 89); 
     white-space: nowrap; 
-    margin: 0 auto;
+    /* margin: 0 auto; */
     letter-spacing: .05em;
     animation: 
     typing 2s steps(15, end),
     blink-caret .75s step-end 3s forwards;
+}
+
+#head p{
+    display: flex;
+    margin-top: 10px;
+    color: #333;
 }
 
 @keyframes typing {
@@ -35,9 +43,9 @@
     50% { border-color: rgb(255, 203, 89); }
 }
 
-#projects {
+/* #projects {
     padding: 20px;
-}
+} */
 
 .grid-container {
     display: grid;
