--- a/abt_ct_me.css
+++ b/abt_ct_me.css
@@ -53,14 +53,13 @@
    
 }
 
-.footer-contact h1 {
+/* .footer-contact h1 {
     font-variant: small-caps;
     font-size:  2vw;
     padding-left: 30px;
-}
+} */
 
 .footer-contact .contact-info {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 5px; 
     font-size:  1.5vw;
     /* padding-left: 50px; */
