--- a/styles_main.css
+++ b/styles_main.css
@@ -89,7 +89,7 @@ html, body {
 
 .hero-image {
     background: 
-        linear-gradient(to bottom, rgba(0, 0, 0, 0) 40%, #ebeff3 100%), 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 40%, transparent 100%), 
         url('images/6.16.viet.png');
     font-variant: small-caps;
     background-size: cover;
